--- a/.github/workflows/deploy-docs-openssl-org.yml
+++ b/.github/workflows/deploy-docs-openssl-org.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "OpenSSL_1_0_2-stable"
       - "OpenSSL_1_1_1-stable"
-      - "openssl-3.**"
+      - "openssl-3.*"
       - "master"
     paths:
       - "doc/**/**.pod"
