--- a/.github/workflows/deploy-docs-openssl-org.yml
+++ b/.github/workflows/deploy-docs-openssl-org.yml
@@ -5,11 +5,12 @@ on:
     branches:
       - "OpenSSL_1_0_2-stable"
       - "OpenSSL_1_1_1-stable"
+      - "openssl-3.0"
       - "openssl-3.*"
       - "master"
     paths:
-      - "doc/**/**.pod"
-      - "doc/**/**.in"
+      - "doc/**/*.pod"
+      - "doc/**/*.in"
 
 jobs:
   trigger:
